assets/css/style.css
/* ... */
.navbar-mobile .dropdown ul a i {
  font-size: 12px;
}
.navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
  color: #f6b024;
}
.navbar-mobile .dropdown > .dropdown-active {
  display: block;
}

/*--------------------------------------------------------------
# DWEB Section
--------------------------------------------------------------*/
#dweb {
  width: 100%;
  overflow: hidden;
  position: relative;
  background: url("../img/globe.png") bottom right no-repeat, url("../img/top_bg.jpg") bottom center no-repeat, linear-gradient(261.51deg, #7E02DF -31.95%, #1E21AB 79.36%) top center;
  background-size: 50%, cover, cover;
  position: relative;
  z-index: 99;
  transition: 0.3s;
  padding: 160px 0 160px 30px;
}
#dweb .title {
  font-style: normal;
  font-size: 12px;
  line-height: 20px;
  font-weight: 300;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #FFFFFF;
  margin: 0 0 0 3px;
}
#dweb .title span {
  font-weight: bold;
}
#dweb h2 {
  color: #fff;
  margin-bottom: 20px;
  font-size: 50px;
  line-height: 54px;
  font-weight: 700;
  letter-spacing: 2px;
}
#dweb h2 span {
  font-weight: 300;
  font-size: 48px;
}
#dweb .description{
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  line-height: 20px;
  color: #FFFFFF;
}
#dweb .registration {
  margin-top: 30px;
}
#dweb .registration a{
  font-size: 14px;
  font-weight: bold;
  letter-spacing: 2px;
  padding: 15px 25px !important;
  height: 55px;
  line-height: 25px; 
  margin-left: 5px;
}
#dweb .registration a:first-child {
  margin-left: 0;
}

.social-g{
  position: absolute;
  left: 30px;
  top: 0;
  z-index: 1;
}
.st-line {
  height: 150px;
  border-right: 1px solid #FFF;
  width: 20px;
}
.vertical {
  display: flex;
  flex-direction: column;
  margin-top: 5px;
  width: 40px;
  height: 40px;
  line-height: 40px;
  text-align: center;
}
.vertical a {
  color: #FFF;
  cursor: pointer;
  font-size: 24px;
}
@media (max-width: 1400px) {
  #dweb h2 {
    font-size: 44px;
    line-height: 48px;
    line-height: 1;
  }
}
@media (max-width: 1280px) {
  #dweb {
    padding: 130px 0 130px 30px;
  }
  #dweb h2 {
    font-size: 36px;
    line-height: 1.1;
  }
  #dweb h2 span {
    font-weight: 300;
    font-size: 36px;
  }
  #dweb .registration a{
    padding: 16px 25px !important;
    height: 52px;
    line-height: 20px;
  }

}
@media (max-width: 992px) {
  #dweb {
    padding: 80px 0 24px 0;
  }
  #dweb h2 {
    font-size: 24px;
    line-height: 1.2;
  }
  #dweb h2 span {
    font-weight: 300;
    font-size: 24px;
  }
  #dweb .registration a {
    padding: 16px 20px !important;
    height: 52px;
    line-height: 20px;
    font-size: 12px;
    letter-spacing: 2px;
  }
  #dweb .registration a:last-child {
    margin-left: 0px;
  }
  .social-g{
    display: none;
  }
}
@media (max-width: 768px) {
  #dweb {
    padding: 90px 30px 120px;
    background: url("../img/top_bg.jpg") bottom left no-repeat, linear-gradient(261.51deg, #7E02DF -31.95%, #1E21AB 79.36%) top center;
    background-size: cover, cover;
  }
  #dweb h2 {
    font-size: 26px;
    line-height: 34px;
    letter-spacing: 1px;
    margin-top: 5px;
  }
  #dweb h2 span {
    font-size: 26px;
  }
  .registration a{
    margin: 10px auto;
    font-size: 16px;
    padding: 40px 60px !important;
    height: 50px;
    line-height: 22px !important; 
    width: 100%;
  }
  #dweb .registration a:last-child {
    margin-left: 0px;
  }
  #dweb .description{
    font-size: 16px;
    line-height: 20px;
  }
  .social-g{
    display: none;
  }
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
  padding: 60px 0;
  overflow: hidden;
}

.section-title h6 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #161616;
  font-weight: bold;;
}
.section-title h2 {
  font-size: 34px;
  line-height: 41px;
  text-transform: capitalize;
  color: #161616;
  text-align: center;
  font-weight: 700;
}

.headline {
  width: 32px;
  height: 3px;
  margin: 0 auto;
  background: #439AE6;
  margin-bottom: 5px;
}
.section-title p {
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 24px;
  text-align: center;
  text-transform: capitalize;
  color: rgba(22, 22, 22, 0.7);
}


@media (max-width: 768px) {
  .section-title h6 {
    font-size: 14px;
    font-weight: bold;
    line-height: 20px;
    margin-bottom: 20px;
  }
  .headline{
    margin-bottom: 20px;
  }
  .section-title h2 {
    font-size: 28px;
    line-height: 34px;
    font-weight: 700;
    margin-bottom: 20px;
  }
  .section-title p {
    font-weight: 500;
    font-size: 18px;
    line-height: 30px;
  }
  .section-title p br {
    display: none;
  }
}

/*--------------------------------------------------------------
# Partners
--------------------------------------------------------------*/
.partners .gray-title {
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: rgba(22, 22, 22, 0.3);
}
.partners .swiper-slide img {
  opacity: 1;
  transition: 0.3s;
}
.partners .swiper-slide:hover img {
  opacity: 1;
}
.partners .swiper-pagination {
  margin-top: 20px;
  position: relative;
}
.partners .swiper-pagination .swiper-pagination-bullet {
  width: 12px;
  height: 12px;
  background-color: #fff;
  opacity: 1;
  border: 1px solid #0880e8;
}
.partners .swiper-pagination .swiper-pagination-bullet-active {
  background-color: #0880e8;
}
.partners .owl-item {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 20px;
}
.partners .owl-item img {
  width: 80%;
  opacity: 1;
}
.partners .owl-item img:hover {
  opacity: 1;
}
.partners .owl-nav, .partners .owl-dots {
  margin-top: 5px;
  text-align: center;
}
/* ... */

